--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -14,22 +14,22 @@ include: 'rules/mix.smk'
 
 rule all:
     input:
-        expand('results/subsampled-sorted/{sample}_{pseed}.{norm}_{seed}.{prop}.bam.bai',
+        expand('results/subsampled-sorted/{norm_seed}.{norm}_{seed}/{sample}_0.{prop}.bam.bai',
                 zip,
                 sample=samples,
-                pseed=pseeds,
+                norm_seed=norm_seeds,
                 norm=norms,
                 seed=seeds,
                 prop=props),
-        expand('results/merged/{sample1}_{pseed1}.{norm1}_{seed1}.{prop1}_{sample2}_{pseed2}.{norm2}_{seed2}.{prop2}.bam',
+        expand('results/merged/{norm_seed1}.{norm1}_{norm_seed2}.{norm2}/{sample1}_0.{prop1}_{sample2}_0.{prop2}.bam',
                 zip,
                 sample1=recipe.sample1.values,
-                pseed1=recipe.seed_s1.values,
+                norm_seed1=recipe.seed_s1.values,
                 norm1=recipe.norms_s1.values,
                 seed1=recipe.seed1.values,
                 prop1=recipe.prop1.values,
                 sample2=recipe.sample2.values,
-                pseed2=recipe.seed_s2.values,
+                norm_seed2=recipe.seed_s2.values,
                 norm2=recipe.norms_s2.values,
                 seed2=recipe.seed2.values,
                 prop2=recipe.prop2.values)
