Added counting + change samtools merge to cat + sort
- base counting using bcftools pileup
- samtools merge ends up sorting by read name,
  so cat + sort works better

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,7 @@
 samples: config/samples.tsv
 twoclus_recipe: config/twoclus_recipe.tsv
+ref: ref/human_g1k_v37.fasta
 mem: 7G
+baseQ: 20
+mapQ: 20
+maxdepth: 8000
